2024-04-01  Bart Schaefer  <schaefer@zsh.org>

	* 52781 (and typo fix): Src/hashtable.c: HIST IGNORE_DUPS treats
	whitespace as significant when HIST_REDUCE_BLANKS is also set.

2024-04-01  Oliver Kiddle  <opk@zsh.org>

	* github #115: OKURA Masafumi: Completion/Unix/Command/_ruby:
	IRB now has `--regexp-completor` and `--type-completor` options

	* 52859: Completion/Zsh/Command/_fc, Completion/Zsh/Command/_vared:
	use _date_formats for fc and complete -m/-M for vared

2024-03-25  Oliver Kiddle  <opk@zsh.org>

	* 52798: Completion/Unix/Command/_ssh,
	Completion/Unix/Type/_ssh_hosts: handle comments in ssh config

2024-03-23  Mikael Magnusson  <mikachu@gmail.com>

	* 52768: Completion/compdump, Completion/compinit: Handle
	completer filenames with funny characters in them

2024-03-21  Peter Stephenson  <p.stephenson@samsung.com>

	* 52780: Src/Modules/hlgroup.c: remove unnecessary returns.

2024-03-20  Oliver Kiddle  <opk@zsh.org>

	* 52783: Src/Modules/hlgroup.c: allow for unset hash element

	* unposted: configure.ac: remove reference to fp_PROG_CC_STDC
	macro which was removed in 52750

2024-03-18  Oliver Kiddle  <opk@zsh.org>

	* 52770: Completion/Linux/Command/_selinux: handle newrole

	* 52769: Completion/Unix/Command/_ansible: fix completion of
	ansible keywords and --step option

	* 52750: Config/defs.mk.in, Etc/zsh-development-guide,
	Src/Makemod.in.in, Src/Modules/files.c, Src/Modules/watch.c,
	Src/Modules/zftp.c, Src/Modules/zprof.c, Src/Zle/compcore.c,
	Src/Zle/zle.h, Src/Zle/zle_keymap.c, Src/Zle/zle_thingy.c,
	Src/exec.c, Src/glob.c, Src/hist.c, Src/makepro.awk, Src/mem.c,
	Src/mkbltnmlst.sh, Src/modentry.c, Src/parse.c, Src/prototypes.h,
	Src/signals.h, Src/utils.c, Src/zsh.h, Src/zsh_system.h, aclocal.m4,
	configure.ac: remove ansi2knr support for old pre-ansi K&R compilers

2024-03-14  Bart Schaefer  <schaefer@zsh.org>

	* 52759: Doc/Zsh/expn.yo, Etc/FAQ.yo, Src/subst.c,
	Test/D10nofork.ztst: change ${ ... } substitution to trim one